News UAT/force-app/main/default/objects/Targeting_Selection_Price__c/Targeting_Selection_Price__c.object-meta.xml
<CustomObject>
    <label>Targeting Selection Price</label>
    <nameField>
        <displayFormat>TSP-{00000}</displayFormat>
        <label>Targeting Selection Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targeting Selection Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>