News UAT/force-app/main/default/objects/Targeting_Selection_Price__c/fields/Targeting_Selection__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Selection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Targeting Selection</label>
    <referenceTo>Targeting_Selection__c</referenceTo>
    <relationshipLabel>Targeting Selection Prices</relationshipLabel>
    <relationshipName>Targeting_Selection_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>