News UAT/force-app/main/default/objects/Targeting_Selection_Price__c/listViews/Targeting_Selection_Prices.listView-meta.xml
<ListView>
    <fullName>Targeting_Selection_Prices</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Effective_Start_Date__c</columns>
    <columns>Effective_End_Date__c</columns>
    <columns>Price__c</columns>
    <columns>Targeting_Selection__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Targeting Selection Prices</label>
</ListView>